--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mediapipe/hands": "^0.4.1675469240",
     "@mediapipe/pose": "^0.5.1675469404",
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@tailwindcss/vite": "^4.1.11",
     "lucide-react": "^0.534.0",
     "react": "^19.1.0",
@@ -25,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.1.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
