--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@ffmpeg/ffmpeg": "0.11.6",
     "@ffmpeg/util": "^0.12.2",
     "@mediapipe/camera_utils": "^0.3.1675466862",
@@ -20,10 +23,13 @@
     "@mediapipe/pose": "^0.5.1675469404",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@tailwindcss/vite": "^4.1.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.534.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.1.1",
     "socket.io-client": "^4.8.1",
